fix(Switchlist): add vertical-align: middle style

--- a/themes/components/switchlist.less
+++ b/themes/components/switchlist.less
@@ -1,6 +1,7 @@
 @switchlist-prefix: ~"@{prefix}switchlist";
 .@{switchlist-prefix} {
   display: inline-block;
+  vertical-align: middle;
   >span {
     padding: 8px 15px;
     border-radius: 0;
